dashboard role auth + revisi 5 (pt) db, logo

--- a/public/selecao/css/style.css
+++ b/public/selecao/css/style.css
@@ -1590,3 +1590,13 @@ section {
 #footer .credits {
   font-size: 13px;
 }
+
+.auth-logo {
+  width: 200px;
+}
+
+@media (max-width: 768px) {
+  .auth-logo {
+    width: 150px;
+  }
+}
